# SolidsResearch

CompressedStrip_Project/: CMakeLists.txt  README.txt  inputFile1_6.in
CompressedStrip_Project/asymptoticCalculation/: CMakeLists.txt
CompressedStrip_Project/asymptoticCalculation/include/: CompressedStripPacaBloch.h  CompressedStrip_asymptotics.h
CompressedStrip_Project/asymptoticCalculation/inputFiles/: test_input.in  test_input_1_6.in  test_input_5.in  test_input_pieceConst.in  test_input_pieceConst_10.in  test_input_pieceConst_1_5.in
CompressedStrip_Project/asymptoticCalculation/source/: CompressedStripPacaBloch.cc  CompressedStrip_asymptotics.cc  find_first_bif_load.cc  first_bif_asymptotics.cc
CompressedStrip_Project/include/: CompressedStripPacaBloch.h  Constituitive.h  mapping_q_eulerian_hp.cc  mapping_q_eulerian_hp.h
CompressedStrip_Project/inputFiles/: PACA_TEST_EIGS.in  asymptotic_piecewiseConstant_10101010.in  asymptotic_piecewiseConstant_20202020.in  asymptotic_piecewiseConstant_555555.in  bloch_eigs_test.in  hp_inputFile_100.in  hp_inputFile_100_refined.in  hp_inputFile_10_2_4.in  hp_inputFile_10_4.in  hp_inputFile_20.in  hp_inputFile_20_refined.in  hp_inputFile_5.in  hp_inputFile_50_4.in  hp_inputFile_5_4.in  hp_inputFile_5_ADAPTIVE.in  hp_inputFile_5_refined.in  hp_inputFile_5_refined_1.in  hp_inputFile_compare_test.in  hp_inputFile_test.in  hp_inputFile_test_3.in  inputFile1_5.in  inputFile1_5_1_bloch.in  inputFile1_5_3.in  inputFile1_6.in  inputFile1_6_1_bloch.in  inputFile1_6_3.in  inputFile1_6_5.in  inputFile3_0_1_bloch.in  inputFile3_0_2.in  inputFile3_0_3.in  inputFile3_0_4.in  inputFile3_0_5.in  inputFile5_0_1_bloch.in  inputFile5_0_2.in  inputFile_coarse_3_0_1_bloch.in  inputFile_coarse_pieceConst_10_0_9_1.in  inputFile_coarse_pieceConst_10_0_9_2.in  inputFile_nonUniform_1_6_1_bloch.in  inputFile_nonUniform_1_6_2.in  inputFile_nonUniform_1_6_3.in  (+20 more)
CompressedStrip_Project/inputFiles/finalRuns/exp_3_0/: inputFile3_0_1.in  inputFile3_0_2.in  inputFile3_0_3.in
CompressedStrip_Project/inputFiles/finalRuns/pieceConst_10/: inputFile_pieceConst_10_0_9_1.in  inputFile_pieceConst_10_0_9_2.in  inputFile_pieceConst_10_0_9_3.in
CompressedStrip_Project/inputFiles/finalRuns/pieceConst_15/: inputFile_pieceConst_1_5_1.in  inputFile_pieceConst_1_5_2.in  inputFile_pieceConst_1_5_3.in
CompressedStrip_Project/inputFiles/finalRuns/pieceConst_24/: inputFile_pieceConst_2_4_1.in  inputFile_pieceConst_2_4_2.in  inputFile_pieceConst_2_4_3.in
CompressedStrip_Project/inputFiles/finalRuns/pieceConst_265/: inputFile_pieceConst_265_1.in  inputFile_pieceConst_265_2.in  inputFile_pieceConst_265_3.in
CompressedStrip_Project/output/1_6_4/: load_info5.txt
CompressedStrip_Project/output/1_6_4/deformed_mesh/: deformed_mesh-1.vtk  deformed_mesh-1001.vtk  deformed_mesh-1002.vtk  deformed_mesh-1003.vtk  deformed_mesh-1004.vtk  deformed_mesh-1005.vtk  deformed_mesh-1006.vtk  deformed_mesh-1007.vtk  deformed_mesh-1008.vtk  deformed_mesh-1009.vtk  deformed_mesh-1010.vtk  deformed_mesh-1011.vtk  deformed_mesh-1012.vtk  deformed_mesh-1013.vtk  deformed_mesh-1014.vtk  deformed_mesh-1015.vtk  deformed_mesh-1016.vtk  deformed_mesh-1017.vtk  deformed_mesh-1018.vtk  deformed_mesh-1019.vtk  deformed_mesh-1020.vtk  deformed_mesh-1021.vtk  deformed_mesh-1022.vtk  deformed_mesh-1023.vtk  deformed_mesh-1024.vtk  deformed_mesh-1025.vtk  deformed_mesh-1026.vtk  deformed_mesh-1027.vtk  deformed_mesh-1028.vtk  deformed_mesh-1029.vtk  deformed_mesh-2.vtk  deformed_mesh-3.vtk  deformed_mesh-4.vtk  deformed_mesh-5.vtk  deformed_mesh-6.vtk  deformed_mesh-7.vtk  deformed_mesh-8.vtk  deformed_mesh-9.vtk
CompressedStrip_Project/output/1_6_4/displacement_from_uniform/: displacement_from_uniform-1001.vtk  displacement_from_uniform-1002.vtk  displacement_from_uniform-1003.vtk  displacement_from_uniform-1004.vtk  displacement_from_uniform-1005.vtk  displacement_from_uniform-1006.vtk  displacement_from_uniform-1007.vtk  displacement_from_uniform-1008.vtk  displacement_from_uniform-1009.vtk  displacement_from_uniform-1010.vtk  displacement_from_uniform-1011.vtk  displacement_from_uniform-1012.vtk  displacement_from_uniform-1013.vtk  displacement_from_uniform-1014.vtk  displacement_from_uniform-1015.vtk  displacement_from_uniform-1016.vtk  (+21 more)
CompressedStrip_Project/source/: CompressedStripPacaBloch.cc  Constituitive.cc  bloch_eigs_branch.cc  bloch_eigs_first_bif.cc  compare_solutions.cc  paca_continue.cc  paca_to_first_bif_instability.cc  princple_info.cc
(+961 files in other folders)
